Refactor: Refactor jni to kotlin native (#21)
* Refactor: initial refactor jni to kotlin native

* Improve: use local instead of platform libraries

* Migrate: migrate windows impls to kn

* Migrate: migrated

* Chore: migrate build script